[package]
name = "enumrust"
version = "2.2.0"
edition = "2021"
description = "Advanced Security Scanner & Vulnerability Hunter"
authors = ["OFJAAAH <ofjaaah@users.noreply.github.com>"]
repository = "https://github.com/KingOfBugbounty/enumrust"
license = "MIT"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2"
indicatif = "0.17"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
scraper = "0.13"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
trust-dns-resolver = "0.23"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
rayon = "1.7"
tokio-test = "0.4"
base64 = "0.21"
lazy_static = "1.4"
dashmap = "5.5"
maxminddb = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
bcrypt = "0.15"
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
hostname = "0.3"
num_cpus = "1.16"
glob = "0.3"


